<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:id="@+id/iv_bank_logo"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/logo_content_desc"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/et_user"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:autoText="false"
        android:hint="@string/user_hint"
        android:inputType="textNoSuggestions"
        app:layout_constraintTop_toBottomOf="@+id/iv_bank_logo"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/et_pwd"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/pwd_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/et_user"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="202dp"
        android:layout_height="62sp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="32dp"
        android:layout_marginTop="204dp"
        android:background="@drawable/rounded_button"
        android:text="@string/lbl_login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pwd"
        app:layout_constraintVertical_bias="0.78" />

</androidx.constraintlayout.widget.ConstraintLayout>